# margin-analysis

./: .copier-answers.yml  .coveragerc  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  test-requirements.txt
account_invoice_margin/: README.rst  __init__.py  __manifest__.py  hooks.py
account_invoice_margin_sale/: README.rst  __init__.py  __manifest__.py  hooks.py
account_invoice_margin_sale_delivered_sync/: README.rst  __manifest__.py
product_cost_incl_bom/: README.rst  __init__.py  __manifest__.py  __openerp__.py  product_cost_incl_bom.py
product_cost_incl_bom_price_history/: __init__.py  __openerp__.py  product.py
product_cost_incl_costs_with_bom/: __init__.py  __openerp__.py  product.py  product_view.xml
product_cost_incl_costs_without_bom/: __init__.py  __openerp__.py  product.py
product_cost_purchase/: __init__.py  __openerp__.py  product.py
product_get_cost_field/: __init__.py  __openerp__.py  product_get_cost_field.py  product_view.xml
product_historical_margin/: __init__.py  __openerp__.py  account_invoice_view.xml  invoice.py  product_historical_margin.py  product_view.xml
product_historical_margin_report/: __init__.py  __manifest__.py  __openerp__.py  product_historical_margin_report.py  product_historical_margin_report_view.xml
product_margin_classification/: README.rst  __manifest__.py
product_price_history/: __init__.py  __openerp__.py  product_price_history.py  product_price_history_view.xml  report_stock_view.xml
repair_margin/: README.rst  (+1 more)
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+467 files in other folders)
