[project]
name = "odoo-addons-oca-margin-analysis"
version = "17.0.20240406.0"
dependencies = [
    "odoo-addon-account_invoice_margin>=17.0dev,<17.1dev",
    "odoo-addon-account_invoice_margin_sale>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
